RESOLVED FIXED162988
Bad ASSERT in ClonedArguments::createByCopyingFrom()
https://bugs.webkit.org/show_bug.cgi?id=162988
Summary Bad ASSERT in ClonedArguments::createByCopyingFrom()
Michael Saboff
Reported 2016-10-05 16:18:52 PDT
The ASSERT: ASSERT(exec->lexicalGlobalObject()->clonedArgumentsStructure() == result->structure()); can erroneously fires when we inline a function with a different lexicalGlocalObject. <rdar://problem/28028373>
Attachments
Patch (1.22 KB, patch)
2016-10-05 16:20 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2016-10-05 16:20:28 PDT
Keith Miller
Comment 2 2016-10-05 16:22:22 PDT
Comment on attachment 290757 [details] Patch r=me.
WebKit Commit Bot
Comment 3 2016-10-05 16:50:04 PDT
Comment on attachment 290757 [details] Patch Clearing flags on attachment: 290757 Committed r206836: <http://trac.webkit.org/changeset/206836>
WebKit Commit Bot
Comment 4 2016-10-05 16:50:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.