Bad ASSERT in ClonedArguments::createByCopyingFrom() https://bugs.webkit.org/show_bug.cgi?id=162988

Reviewed by Keith Miller.

Removed bogus assert.

* runtime/ClonedArguments.cpp:
(JSC::ClonedArguments::createByCopyingFrom):


Canonical link: https://commits.webkit.org/180889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206836 268f45cc-cd09-0410-ab3c-d52691b4dbfc